# pyporscheconnectapi

./: .gitignore  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: python-publish.yml  tests.yml
examples/: explore.py
pyporscheconnectapi/: connection.py  const.py  exceptions.py  oauth2.py  remote_services.py  vehicle.py
tests/: conftest.py  test_account.py  test_connection.py  test_oauth2.py  test_remote_services.py  test_vehicle.py
tests/fixtures/: vehicle_overview.json  vehicle_overview_combustion.json
